--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "slugify": "^1.6.5",
     "validator": "^13.7.0",
     "xss-clean": "^0.1.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
